tests/rust_data/rocket/core/codegen/tests/ui-fail-stable/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-stable/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
